- adjustment needed to prevent visible notch to the left and right header borders when {{bigname}} and {{name}} are used together

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -4346,11 +4346,16 @@ details[open].thac0-box {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
+/* needed to prevent visible notch when {{bigname}} and {{name}} are used together */
+.sheet-rolltemplate-attacks .sheet-row:has(.sheet-bigger-text) + .sheet-row:has(.sheet-template-header) .sheet-template-header,
+.sheet-rolltemplate-general .sheet-row:has(.sheet-bigger-text) + .sheet-row:has(.sheet-template-header) .sheet-template-header {
+  border-radius: 0;
+}
+
 .sheet-rolltemplate-attacks .sheet-bigger-text,
 .sheet-rolltemplate-general .sheet-row .sheet-bigger-text {
   font-size: calc(var(--text-xxl) * 1.5);
   line-height: normal;
-  margin-bottom: -5px;
   min-height: 1em;
   padding: 2px;
   z-index: 1;
